--- a/public/order.html
+++ b/public/order.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-
     <header>
         <nav class="navbar navbar-expand-md">
             <a class="navbar-brand" href="/images/teddy-mad.png"><img class="logo" src="/images/teddy-mad.png"
@@ -43,20 +42,17 @@
             <div class="container">
                 <div class="row" id="myData">
                     <div class="container-sm title">
-                        <h2>Your order nr. <span id="orderNumber">12345</span> is confirmed!</h2>
+                        <h2>Your order nr. <span id="orderNumber">xxxxxx</span> is confirmed!</h2>
                     </div>
                     <div class="container-fluid" id="orderConfirmation">
-                        <h4>Please submit the total of <span id="orderTotal">123</span>.00 EUR by <span
+                        <h4>Please submit the total of <span id="orderTotal">00</span>.00 EUR by <span
                                 class="text-warning">express pigeon
                                 messenger</span> </h4>
                     </div>
                 </div>
 
                 <div class="container">
-
-
                     <p>Loved our products? buy more here: <a id="home-link" href="index.html">Home</a></p>
-
                 </div>
             </div>
         </section>
@@ -66,8 +62,6 @@
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
             <a href="nounours.com">Nounours.com</a>
         </div>
-
-
     </footer>
 </body>
 
